--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </h3>
         <a href="./main.zip" download>Download</a>
       </div>
-      <p class="source"><a href="#">View</a> source code and documentation</p>
+      <p class="source"><a href="https://github.com/VinayB2/weather-app">View</a> source code and documentation</p>
     </div>
     <div class="footer">
       <h3>Credits</h3>
