--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           “ Stay ahead of the weather with our app ”
           <h2>Download for<br />Desktop</h2>
         </h3>
-        <a href="./main.zip" download>Download</a>
+        <a href="./main.exe" download>Download</a>
       </div>
       <p class="source"><a href="https://github.com/VinayB2/weather-app">View</a> source code and documentation</p>
     </div>
