--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           “ Stay ahead of the weather with our app ”
           <h2>Download for<br />Desktop</h2>
         </h3>
-        <a href="https://drive.google.com/drive/folders/1lNR2wKC2QBvs6u90VnyQpsiH8YunqJ2J?usp=sharing">Download</a>
+        <a href="https://drive.google.com/drive/folders/1JMUc8cfea90c7q7N5ku-xFqepYUGEs_v?usp=drive_link">Download</a>
       </div>
       <p class="source"><a href="https://github.com/VinayB2/weather-app">View</a> source code and documentation</p>
     </div>
